AKS/AGIC-Ingress-URL-Routing/kube-manifests-defaultBackend/IngressService-Manifests/Ingress-URL-Routing.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-url-routing
spec:
  ingressClassName: azure-application-gateway
  defaultBackend:
    service:
      name: myapp-nginx-clusterip-service
      port:
        number: 80
  rules:
    - http:
        paths:
          - path: /app1
            pathType: Prefix
            backend:
              service:
                name: app1-nginx-clusterip-service
                port: 
                  number: 80
          - path: /app2
            pathType: Prefix
            backend:
              service:
                name: app2-nginx-clusterip-service
                port: 
                  number: 80  
#          - path: /
#            pathType: Prefix
#            backend:
#              service:
#                name: myapp-nginx-clusterip-service
#                port: 
#                  number: 80
